# cpp_web_server

./: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md  hoothoot.cpp  hoothootNetwork.hpp
Networking/: BindingSocket.cpp  BindingSocket.hpp  ConnectingSocket.cpp  ConnectingSocket.hpp  SimpleSocket.cpp  SimpleSocket.hpp  hoothoot-network.hpp
Networking/Servers/: SimpleServer.cpp  SimpleServer.hpp  WebServer.cpp  WebServer.hpp  test.cpp
Networking/Sockets/: BindingSocket.cpp  BindingSocket.hpp  ConnectingSocket.cpp  ConnectingSocket.hpp  ListeningSocket.cpp  ListeningSocket.hpp  SimpleSocket.cpp  SimpleSocket.hpp  hoothoot-sockets.hpp
assets/: hello.html  index.css  index.html
